# aoc

./: .gitignore
2021/d10_syntax_scoring/: Cargo.toml
2021/d11_dumbo_octopus/: Cargo.toml
2021/d12_passage_pathing/: Cargo.toml
2021/d13_transparent_origami/: Cargo.toml
2021/d14_extended_polymerization/: Cargo.toml
2021/d15_chiton/: Cargo.toml
2021/d16_bits/: Cargo.toml
2021/d17_trick_shot/: Cargo.toml
2021/d18/: Cargo.toml
2021/d19_beacon_scanner/: Cargo.toml
2021/d20/: Cargo.toml
2021/d21/: Cargo.toml
2021/d22/: Cargo.toml
2021/d22_alt/: Cargo.toml
2021/d23/: Cargo.toml
2021/d24/: Cargo.toml
2021/d25/: Cargo.toml
2021/d4_giant_squid/: Cargo.toml
2021/d5_hydrothermal_venture/: Cargo.toml
2021/d6_fishes/: Cargo.toml
2021/d7_crabs/: Cargo.toml
2021/d8_segment/: Cargo.toml
2021/d9_smoke_basin/: Cargo.toml
2023/d10_pipe_maze/: Cargo.toml
2023/d11_cosmic_expansion/: Cargo.toml
2023/d12_hot_springs/: Cargo.toml
2023/d13_poi/: Cargo.toml
2023/d14_prd/: Cargo.toml
2023/d15_lens_library/: Cargo.toml
2023/d16_tfwbl/: Cargo.toml
2023/d17_clumsy_crucible/: Cargo.toml
2023/d18_lavaduct_lagoon/: Cargo.toml
2023/d19_aplenty/: Cargo.toml
2023/d20_pulse_propagation/: Cargo.toml
2023/d20_pulse_propagation/src/: main.rs
2023/d21_step_counter/: Cargo.toml
2023/d22_sand_slabs/: Cargo.toml
2023/d23_a_long_walk/: Cargo.toml
2023/d24_ntmto/: Cargo.toml
2024/d16/: d16
d10/: Cargo.toml
d12/: Cargo.toml
d13/: Cargo.toml
d16/: Cargo.toml
d17/: Cargo.toml
d20/: Cargo.toml
d3/: Cargo.toml
d6/: Cargo.toml
(+120 files in other folders)
