[package]
name = "d20_pulse_propagation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
gcd = "2.3.0"
itertools = "0.12.0"
scan_fmt = "0.2.6"
linked-hash-map = "0.5.6"
regex = "1.10.2"
